--- a/public/learning-app-prototype/resources/css/_main.scss
+++ b/public/learning-app-prototype/resources/css/_main.scss
@@ -1,5 +1,5 @@
+// @import './_breakpoints.scss';
 @import './_base.scss';
-@import './_form.scss';
 
 * {
     box-sizing: border-box;
@@ -9,5 +9,5 @@
 
 body {
     background: $background;
-    font-size: xx-large;
+
 }
