--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -15,6 +15,8 @@ $white: #FFFFFF;
     font-size: 1.25rem;
     font-weight: bold;
     border: none;
+    text-decoration: none;
+    margin-bottom: 1rem;
 
     &-green {
         background: $green;
@@ -40,6 +42,7 @@ $white: #FFFFFF;
         font-weight: bold;
         background: none;
         border: none;
+        text-decoration: none;
     }
 }
 
@@ -48,6 +51,9 @@ $white: #FFFFFF;
 h1 {
     font-size: 4rem;
     color: $blue;
+    text-align: center;
+    padding-top: 4rem;
+    padding-bottom: 2rem;
 }
 
 h2 {
