--- a/public/learning-app-prototype/resources/css/_form.scss
+++ b/public/learning-app-prototype/resources/css/_form.scss
@@ -2,21 +2,37 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
 
-    .form-container {
+.form-container {
+    padding: 2rem;
+    border-radius: 25px;
+    background: $background-light;
+
+    .description {
+        padding-block: 1rem;
+        &-big {
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
+    }
+
+    &.unauth {
         width: 50%;
-        margin-left: auto;
         margin-right: auto;
-        padding: 2rem;
-        border-radius: 25px;
-        background: $background-light;
+        margin-left: auto;
+    }
+
+    &.auth {
+        margin-inline: 2rem;
     }
 }
+
 .remember {
-    &-container{
-    display: flex;
-    align-items: center;
-    }   
+    &-container {
+        display: flex;
+        align-items: center;
+    }
 
     &-check {
         margin-left: 0.5rem;
@@ -28,6 +44,7 @@
     flex-direction: column;
     align-items: start;
     margin-top: 2rem;
+
     .link {
         margin-bottom: 1rem;
     }
@@ -36,11 +53,11 @@
 .input-container {
     display: flex;
     flex-direction: column;
+    margin-bottom: 1rem;
 }
 
 .error-msg {
     color: $danger-red;
-    margin-top: 0.25rem;
 }
 
 .info-text {
