Add LectureController and Lecture page to play different lectures

--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -1,3 +1,9 @@
+main, header, footer {
+    max-width: 1200px;
+    align-items: center;
+    margin-inline: auto;
+}
+
 //colors
 $background: #FBF4CE;
 $background-light: #FCF9E7;
