Add type column to question, add styles to mc-question-type and progressbar for lecture

--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -10,6 +10,7 @@ $background-light: #FCF9E7;
 $yellow: #FFD521;
 $yellow-dark: #e9c10f;
 $blue: #103A51;
+$blue-light: #3888b3;
 $green: #67917B;
 $green-dark: #517a65;
 $danger-red: #D83B19;
@@ -80,7 +81,6 @@ h1 {
     color: $blue;
     text-align: center;
     padding-top: 4rem;
-    padding-bottom: 2rem;
 }
 
 h2 {
