--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -16,6 +16,7 @@ $green-dark: #517a65;
 $danger-red: #D83B19;
 $danger-red-dark: #af2304;
 $grey: #CCC8C8;
+$grey-light: #e9e9e3;
 $white: #FFFFFF;
 
 // buttonstyles
