Add animations between questions

--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -8,7 +8,7 @@ main, header, footer {
 $background: #FBF4CE;
 $background-light: #FCF9E7;
 $yellow: #FFD521;
-$yellow-dark: #e9c10f;
+$yellow-dark: #E3A328;
 $blue: #103A51;
 $blue-light: #3888b3;
 $green: #67917B;
