Add footer and result styles

--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -1,7 +1,51 @@
-main, header, footer {
+main,
+header,
+footer {
     max-width: 1200px;
     align-items: center;
     margin-inline: auto;
+}
+
+// breakpoints
+$breakpoints: (
+    "default": (0px),
+    "mobile": (667px),
+    "tablet": (1280px),
+    "desktop": (1440px)) !default;
+
+$media-direction: max;
+
+@mixin breakpoint($breakpoint, $direction: $media-direction) {
+    @if map-has-key($breakpoints, $breakpoint) {
+        @if $direction ==only {
+            $smaller: 0px;
+
+            @each $name, $width in breakpoints {
+                @if width < map-get($breakpoints, $breakpoint) {
+                    $smaller: max($smaller, $width
+                    );
+            }
+        }
+
+        @media (min-width: $smaller) and (max-width: map-get($breakpoints, $breakpoint)) {
+            @content;
+        }
+    }
+
+    @else {
+        @media(#{$direction}-width: #{map-get($breakpoints, $breakpoint)}) {
+            @content;
+        }
+    }
+}
+
+@else if unitless($breakpoint) {
+    $breakpoint: $breakpoints + px;
+
+    @media(#{direction}-width: $breakpoint) {
+        @content;
+    }
+}
 }
 
 //colors
@@ -28,6 +72,12 @@ $white: #FFFFFF;
     border: none;
     text-decoration: none;
     margin-bottom: 1rem;
+
+    @include breakpoint("mobile") {
+        font-size: 1rem;
+        padding: 10px 12px;
+    }
+
     &:hover {
         cursor: pointer;
     }
@@ -36,6 +86,7 @@ $white: #FFFFFF;
         background: $green;
         color: $white;
         box-shadow: 0px 5px 0px $grey;
+
         &:hover {
             background: $green-dark;
         }
@@ -45,6 +96,7 @@ $white: #FFFFFF;
         background: $yellow;
         color: $blue;
         box-shadow: 0px 5px 0px $green;
+
         &:hover {
             background: $yellow-dark;
         }
@@ -54,6 +106,7 @@ $white: #FFFFFF;
         background: $danger-red;
         color: $white;
         box-shadow: 0px 5px 0px $yellow;
+
         &:hover {
             background: $danger-red-dark;
         }
@@ -66,6 +119,7 @@ $white: #FFFFFF;
         background: none;
         border: none;
         text-decoration: none;
+
         &:hover {
             text-decoration: underline;
         }
@@ -82,48 +136,25 @@ h1 {
     color: $blue;
     text-align: center;
     padding-top: 4rem;
+
+    @include breakpoint("mobile") {
+        font-size: 2.5rem;
+    }
 }
 
 h2 {
     font-size: 3rem;
     color: $blue;
+
+    @include breakpoint("mobile") {
+        font-size: 2rem;
+    }
 }
 
 h3 {
     font-size: 2rem;
-}
 
-$breakpoints: (
-    "default": (0px),
-    "mobile": (667px),
-    "tablet": (1280px),
-    "desktop": (1440px)
-) !default;
-
-$media-direction: max;
-
-@mixin breakpoint($breakpoint, $direction: $media-direction) {
-    @if map-has-key($breakpoints, $breakpoint) {
-        @if $direction == only {
-            $smaller: 0px;
-            @each $name, $width in breakpoints {
-                @if width < map-get($breakpoints, $breakpoint) {
-                    $smaller: max($smaller, $width);
-                }
-            }
-            @media (min-width: $smaller) and (max-width: map-get($breakpoints, $breakpoint)) {
-                @content;
-            }
-        } @else {
-            @media(#{$direction}-width: #{map-get($breakpoints, $breakpoint)}) {
-                @content;
-            }
-        }
-    } @else if unitless($breakpoint) {
-        $breakpoint: $breakpoints + px;
-
-        @media(#{direction}-width: $breakpoint) {
-            @content;
-        }
+    @include breakpoint("mobile") {
+        font-size: 1.5rem;
     }
 }
