--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -67,15 +67,14 @@ $white: #FFFFFF;
 .btn {
     border-radius: 50px;
     padding: 10px 20px;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     font-weight: bold;
     border: none;
     text-decoration: none;
     margin-bottom: 1rem;
 
     @include breakpoint("mobile") {
-        font-size: 1rem;
-        padding: 10px 12px;
+        padding: 10px 15px;
     }
 
     &:hover {
@@ -132,7 +131,7 @@ p {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 2.75rem;
     color: $blue;
     text-align: center;
     padding-top: 4rem;
@@ -143,8 +142,9 @@ h1 {
 }
 
 h2 {
-    font-size: 2.75rem;
+    font-size: 2rem;
     color: $blue;
+    text-align: center;
 
     @include breakpoint("mobile") {
         font-size: 1.75rem;
@@ -152,7 +152,7 @@ h2 {
 }
 
 h3 {
-    font-size: 2rem;
+    font-size: 1.25rem;
 
     @include breakpoint("mobile") {
         font-size: 1.25rem;
