Small fixes on nav buttons

--- a/public/learning-app-prototype/resources/css/_form.scss
+++ b/public/learning-app-prototype/resources/css/_form.scss
@@ -38,6 +38,7 @@
     flex-direction: column;
     align-items: start;
     margin-top: 2rem;
+    gap: 1rem;
 
     .link {
         margin-bottom: 1rem;
