--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -135,8 +135,9 @@ h1 {
     color: $blue;
     text-align: center;
     padding-top: 4rem;
-
+    
     @include breakpoint("mobile") {
+        padding-top: 0;
         font-size: 2.5rem;
     }
 }
