--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -71,7 +71,7 @@ $white: #FFFFFF;
     font-weight: bold;
     border: none;
     text-decoration: none;
-    
+
     @include breakpoint("mobile") {
         font-size: 1rem;
         padding: 10px 15px;
@@ -135,7 +135,7 @@ h1 {
     color: $blue;
     text-align: center;
     padding-top: 4rem;
-    
+
     @include breakpoint("mobile") {
         padding-top: 0;
         font-size: 2.5rem;
@@ -160,7 +160,11 @@ h3 {
     }
 }
 
-p, h1, h2, h3, h4 {
+p,
+h1,
+h2,
+h3,
+h4 {
     &:hover {
         cursor: default;
     }
