--- a/public/learning-app-prototype/resources/css/_base.scss
+++ b/public/learning-app-prototype/resources/css/_base.scss
@@ -145,7 +145,7 @@ h1 {
 h2 {
     font-size: 2rem;
     color: $blue;
-    text-align: center;
+    // text-align: center;
 
     @include breakpoint("mobile") {
         font-size: 1.75rem;
