Add show password function

--- a/public/learning-app-prototype/resources/css/_form.scss
+++ b/public/learning-app-prototype/resources/css/_form.scss
@@ -61,6 +61,10 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
+    ul {
+        margin-bottom: 0.5rem;
+        color: $blue;
+    }
 }
 
 .error-msg {
